# raptor-cute-c

./: .clang-format  .clang-format-ignore  .clangd  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Gemfile  README.md  Rakefile  TODO.md  build.sh  cmake_fix.cmake  notes.txt  run.sh
.claude/: settings.local.json
.github/workflows/: build.yml  iwyu.yml
assets/: alan.ase  background.ase  bon_bon.ase  boosters.ase  enemy_bullet.ase  explosion.ase  intro.ase  lips.ase  player.ase  sparkle.ase
assets/emscripten/: shell.css  shell.html
assets/icons/: icon.icns
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  UniversalAppleBuild.cmake
include/: pico_ecs.h
shell/: shell.css  shell.html  shell.js
src/: CMakeLists.txt  main.c  target_desktop.c  target_emscripten.c
src/app/: CMakeLists.txt
src/app/cmake/: AppAssets.cmake
src/app/cmake/packaging/: Darwin.cmake
src/engine/: CMakeLists.txt  arena.c  arena.h  common.h  cute_macros.h  game_input.h  game_memory.h  game_state.c  game_state.h  log.h  platform.h
src/game/: CMakeLists.txt  background_scroll.c  background_scroll.h  collision.c  collision.h  component.h  coroutine.c  coroutine.h  ecs.c  ecs.h  enemy.c  enemy.h  event.c  event.h  explosion.c  explosion.h  explosion_particle.c  explosion_particle.h  factories.c  factories.h  factory.c  factory.h  floating_score.c  floating_score.h  formation.c  formation.h  game.c  game.h  hit_particle.c  hit_particle.h  input.c  input.h  movement.c  movement.h  movement_pattern.c  movement_pattern.h  player.c  player.h  player_bullet.c  player_bullet.h  (+13 more)
src/game/asset/: audio.c  audio.h  font.c  font.h  sprite.c  sprite.h  utils.h
src/game/scene/: gameplay.c  gameplay.h  intro.c  intro.h
src/platform/: platform.h  platform_cute.c  platform_cute.h
tests/: CMakeLists.txt  README.md  run_tests.sh  test_framework.h  test_hot_reload.c  test_main.c  test_platform.c  test_state_preservation.c
